# mclo

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  LICENSE.txt  README.md  vcpkg.json
.github/instructions/: cpp-standards.instructions.md
.github/skills/clang-format/: SKILL.md
.github/skills/cmake-config/: SKILL.md
.github/skills/commit-messages/: SKILL.md
.github/skills/compile-files/: SKILL.md
.github/skills/running-benchmarks/: SKILL.md
.github/skills/running-unit-tests/: SKILL.md
.github/skills/writing-benchmarks/: SKILL.md
.github/skills/writing-documentation/: SKILL.md
.github/skills/writing-unit-tests/: SKILL.md
.github/workflows/: clang-format.yml  cmake-single-platform.yml
benchmarks/: CMakeLists.txt  bit_benchmarks.cpp  bitset_benchmark.cpp  enum_bi_map_benchmarks.cpp  enum_range_benchmarks.cpp  enum_string_bi_map_benchmarks.cpp  hash_benchmarks.cpp  math_benchmarks.cpp  packed_int_array_benchmarks.cpp  packed_int_vector_benchmarks.cpp  radix_sort_benchmarks.cpp  random_generator_benchmarks.cpp  slot_map_benchmarks.cpp  string_benchmarks.cpp
cmake/: mclo-config.cmake.in
include/mclo/: 128_bit_integer.hpp  algorithm.hpp  any_of_type.hpp  array.hpp  arrow_proxy.hpp  ascii_string_utils.hpp  assume.hpp  bit.hpp  bitset.hpp  constant_evaluated.hpp  constexpr_hash.hpp  dense_slot_map.hpp  detected.hpp  dynamic_bitset.hpp  enum_map.hpp  enum_range.hpp  enum_set.hpp  enum_size.hpp  enum_string_bi_map.hpp  executor.hpp  fixed_point.hpp  fnva1.hpp  hash_combine.hpp  identity.hpp  integer_range.hpp  math.hpp  meta.hpp  mph.hpp  new_type.hpp  numeric.hpp  paged_slot_map.hpp  platform.hpp  preprocessor.hpp  slot_map_handle.hpp  small_optional.hpp  small_optional_integer.hpp  small_vector.hpp  standard_integer_type.hpp  string_buffer.hpp  string_buffer_io.hpp  (+7 more)
include/mclo/algorithm/: minmax_scored.hpp  radix_sort.hpp  unstable_erase.hpp
include/mclo/allocator/: arena_allocator.hpp  default_resource.hpp  linear_allocator.hpp  memory_resource.hpp  new_delete_resource.hpp  null_resource.hpp  pool_allocator.hpp  resource_allocator.hpp  upstream_resource.hpp
include/mclo/concepts/: always_false.hpp  any_of_type.hpp  arithmetic.hpp  container_compatible_range.hpp  derived_from.hpp  invocable_r.hpp  specialization_of.hpp
include/mclo/container/: arrow_proxy.hpp  bitset.hpp  circular_buffer.hpp  dense_slot_map.hpp  dynamic_bitset.hpp  enum_string_bi_map.hpp  graph.hpp  hash_map.hpp  intrusive_forward_list.hpp  intrusive_forward_list_hook.hpp  mph.hpp  mph_map.hpp  mph_set.hpp  packed_int_array.hpp  packed_int_vector.hpp  slot_map_handle.hpp  small_vector.hpp  span.hpp  static_vector.hpp  synth_three_way.hpp  type_id_set.hpp
include/mclo/debug/: assert.hpp  breakpoint.hpp  debugger_attached.hpp  unreachable.hpp
include/mclo/detail/: bitset_base.hpp  enum_container.hpp
include/mclo/enum/: enum_bi_map.hpp  enum_map.hpp  enum_range.hpp  enum_set.hpp  enum_size.hpp  enum_string_bi_map.hpp
include/mclo/functional/: bind.hpp
include/mclo/hash/: chrono_types.hpp  constexpr_hash.hpp  default_hasher.hpp  fnv1a_hasher.hpp  hash.hpp  hash_append.hpp  hash_append_range.hpp  hasher.hpp  murmur_hash_3.hpp  rapidhash.hpp  std_adapter.hpp  std_types.hpp  xxhash.hpp
include/mclo/memory/: alloca.hpp  allocate_from_tuple.hpp  allocate_unique.hpp  byte_literals.hpp  copy_on_write.hpp  flexible_array.hpp  indirect.hpp  intrusive_ptr.hpp  intrusive_ref_counter.hpp  linear_allocator.hpp  not_null.hpp  pointer_variant.hpp  polymorphic.hpp  shared_ptr.hpp  tagged_ptr.hpp  variable_length_array.hpp
include/mclo/meta/: all_of.hpp  any_of.hpp  apply.hpp  count.hpp  filter.hpp  first.hpp  flatten.hpp  index_of.hpp  join.hpp  last.hpp  nth_type.hpp  pop_first.hpp  pop_last.hpp  push_first.hpp  push_last.hpp  repeat.hpp  transform.hpp  type_aliases.hpp  type_id.hpp  type_list.hpp  type_name.hpp
include/mclo/numeric/: 128_bit_integer.hpp  align.hpp  bit.hpp  checked_math.hpp  fixed_point.hpp  fixed_point_io.hpp  log2.hpp  math.hpp  morton_index.hpp  normalized_float.hpp  overflowing_math.hpp  pow10.hpp  pow2.hpp  saturated_math.hpp  vector.hpp  (+2 more)
licenses/: THIRD_PARTY_NOTICES.md  cpptrace.txt  fmt.txt  libassert.txt  magic_enum.txt  murmurhash3.txt  rapidhash.txt  xsimd.txt  xxhash.txt
source/: CMakeLists.txt  ascii_string_simd.cpp  ascii_string_utils.cpp  string_utils.cpp
source/allocator/: arena_allocator.cpp  default_resource.cpp  linear_allocator.cpp  pool_allocator.cpp
source/debug/: assert.cpp  breakpoint.cpp  debugger_attached.cpp
source/hash/: murmur_hash_3.cpp  rapidhash.cpp  xxhash.cpp
source/memory/: linear_allocator.cpp
source/numeric/: bit.cpp
source/platform/: shared_library.cpp  windows_wrapper.cpp
source/random/: chacha.cpp  chacha20.cpp  splitmix64.cpp  xoshiro256plusplus.cpp
source/string/: ascii_string_simd.cpp  ascii_string_simd.hpp  ascii_string_utils.cpp  compare_ignore_case.cpp  string_utils.cpp  wide_convert.cpp
source/threading/: adaptive_waiter.cpp  condition_variable.cpp  mutex.cpp  thread_local_key.cpp  thread_properties.cpp
source/utility/: sem_version.cpp  uuid.cpp
tests/: CMakeLists.txt  allocate_unique_tests.cpp  array_tests.cpp  assert_exception.hpp  assert_listener.cpp  assert_macro_tests.cpp  assert_macros.cpp  assert_macros.hpp  atomic128_tests.cpp  atomic_shared_ptr_tests.cpp  bit_tests.cpp  bitset_tests.cpp  chacha20_tests.cpp  chacha_tests.cpp  checked_math_tests.cpp  circular_buffer_tests.cpp  consteval_check.h  consteval_check.hpp  copy_on_write_tests.cpp  enum_map_tests.cpp  enum_range_tests.cpp  enum_set_tests.cpp  fancy_pointer.hpp  fixed_point_tests.cpp  flexible_array_tests.cpp  graph_tests.cpp  hash_combine.cpp  hash_table_tests.cpp  hash_tests.cpp  hex_convert_tests.cpp  indirect_tests.cpp  instanced_thread_local_tests.cpp  intrusive_forward_list_tests.cpp  intrusive_ptr_tests.cpp  lazy_convert_construct_tests.cpp  loop_unroll_tests.cpp  map_lookup_tests.cpp  math_tests.cpp  meta_tests.cpp  minmax_scored_tests.cpp  (+48 more)
tests/test_module/: test_module.cpp
visualizers/: mclo.natvis
(+138 files in other folders)
